--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -324,10 +324,10 @@ body.series-page-overlay-on {
 }
 
 // fix header video (temporary)
-.content--explore-series-article.explore--video {
-	height: 640px !important;
-	min-height: auto !important;
-}
+// .content--explore-series-article.explore--video {
+// 	height: 640px !important;
+// 	min-height: auto !important;
+// }
 
 
 .boot_newsletter {
