changes bold type to text sans

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -348,7 +348,7 @@ body.series-page-overlay-on {
 		margin-top: 15px;
 		background-color: #EEF5FF;
 		label {
-			font-family: "Guardian Sans Web", sans-serif;
+			font-family: "Guardian Text Sans Web", "Guardian Sans Web", sans-serif;
 			font-size: 16px;
 			padding-bottom: 8px;
 			display: block;
